# BasicAlgorithms

./: LICENSE  README.md
.github/workflows/: ci.yml
BinarySearch/: pyproject.toml
BinarySearch/src/BinarySearch/: __init__.py  binary_search.py
BinarySearch/tests/: test_binary_search.py
BinaryTree/: pyproject.toml
BinaryTree/src/BinaryTree/: __init__.py  binary_tree.py
BinaryTree/tests/: test_binary_tree.py
BubbleSort/: pyproject.toml
BubbleSort/src/BubbleSort/: __init__.py  bubble_sort.py
BubbleSort/tests/: test_bubble_sort.py
Fibonacci/: pyproject.toml
Fibonacci/src/Fibonacci/: __init__.py  fibonacci.py
Fibonacci/tests/: test_fibonacci.py
InsertationSort/: pyproject.toml
InsertationSort/src/InsertationSort/: InsertationSort.py  __init__.py  insertation_sort.py
InsertationSort/tests/: TestInsertationSort.py  test_insertation_sort.py
LinearSearch/: pyproject.toml
LinearSearch/src/LinearSearch/: __init__.py  linear_search.py
LinearSearch/tests/: test_linear_search.py
LinkedList/: pyproject.toml
LinkedList/src/LinkedList/: linked_list.py
LinkedList/tests/: test_linked_list.py
QuickSort/: pyproject.toml
QuickSort/src/QuickSort/: __init__.py  quick_sort.py
QuickSort/tests/: test_quick_sort.py
SelectionSort/: pyproject.toml
SelectionSort/src/SelectionSort/: __init__.py  selection_sort.py
SelectionSort/tests/: test_selection_sort.py
