[tool.poetry]
name = "binarytree"
version = "0.1.0"
description = ""
authors = ["HardPacific <93593742+Hard-Pacific@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
